--- a/index.html
+++ b/index.html
@@ -38,11 +38,8 @@
 
     	 <!--Header-->
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>                        
+         <span class="oi oi-menu"></span> Menu                   
       </button>
-      <a class="navbar-brand" href="#">Menu</a>
     </div>
     <div>
       <div class="collapse navbar-collapse" id="myNavbar">
@@ -60,6 +57,7 @@
 
  <!-- Section 1-->
 <div id="section1" class="container-fluid">
+	<div class="overlay"></div>
   <h1>Section 1</h1>
   <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
   <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
@@ -67,6 +65,7 @@
 
  <!-- Section 2-->
 <div id="section2" class="container-fluid">
+	<div class="overlay"></div>
   <h1>Section 2</h1>
   <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
   <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
